# Template

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
include/add/: add.h
include/sub/: sub.h
lib/add/: add.lib
lib/sub/: sub.lib
src/: CMakeLists.txt  main.cpp
src/add/: CMakeLists.txt  add.cpp
src/sub/: CMakeLists.txt  sub.cpp
tests/: CMakeLists.txt
tests/add/: CMakeLists.txt  test_add.cpp
tests/sub/: CMakeLists.txt  test_sub.cpp
